Fixes Bug 691225, integrates Norbert Janssen's work to correctly set the next font source.  No expected difference this functionality is not regression tested.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11298 a1074d23-0009-0410-80fe-cf8c14f379e6